--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,14 +17,14 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        compiler: [gcc-13, clang-17]
+        compiler: [gcc-13, clang-18]
         include:
           - compiler: gcc-13
             cc: gcc-13
             cxx: g++-13
-          - compiler: clang-17
-            cc: clang-17
-            cxx: clang++-17
+          - compiler: clang-18
+            cc: clang-18
+            cxx: clang++-18
     
     steps:
       - uses: actions/checkout@v4
@@ -35,7 +35,7 @@ jobs:
           sudo apt-get install -y \
             cmake \
             ninja-build \
-            ${{ matrix.compiler == 'gcc-13' && 'gcc-13 g++-13' || 'clang-17' }} \
+            ${{ matrix.compiler == 'gcc-13' && 'gcc-13 g++-13' || 'clang-18' }} \
             libvulkan-dev \
             libglfw3-dev
       
@@ -68,9 +68,9 @@ jobs:
           arch: x64
       
       - name: Install Vulkan SDK
-        uses: humbletim/setup-vulkan-sdk@v1.2.0
+        uses: humbletim/setup-vulkan-sdk@v1.2.1
         with:
-          vulkan-query-version: latest
+          vulkan-query-version: 1.4.304.1
           vulkan-components: Vulkan-Headers, Vulkan-Loader
           vulkan-use-cache: true
       
